--- a/front-master/src/index.html
+++ b/front-master/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mentor On Demand</title>
+  <title>Find your Mentors</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
